--- a/about.html
+++ b/about.html
@@ -220,9 +220,13 @@
       <h2>Who I Am</h2>
       <p class="about-text">
         Hi! I'm <strong>Efrata Silesh</strong>, a high school student at Bahir Dar University (B.D.U.) STEM Center.
-        I'm passionate about creative technology, especially web development. 
+        I'm passionate about creative technology, especially Game development, and Cyber security. 
+        </p>
+        <p>
         My interest in programming began with school experiences that sparked my curiosity about how technology works.
         I've learned the basics of C++, Python, and C#, and I enjoy applying these skills to build projects that positively impact my community.
+        </p>
+        <p>
         I love learning new skills, exploring ideas, and turning them into meaningful creations. 💻✨
       </p>
     </section>
@@ -240,6 +244,8 @@
       <h2>Hobbies & Interests 🎨</h2>
       <p class="about-text">
         I enjoy coding, reading, drawing, and experimenting with design ideas. 
+        </p>
+        <p>
         I strongly believe that creativity and technology together can build a better and more innovative world!
       </p>
     </section>
