--- a/achievements.html
+++ b/achievements.html
@@ -193,7 +193,8 @@
 
     <div class="achievement">
       <h3>Member of Student Council</h3>
-      <p class="description">As a student council member, I participated in organizing events, announcement, and leadership qualities in the role of media coordinator that helped me improve communication and teamwork skills.</p>
+      <p class="description"> 
+  As a Student Council member in the role of Media Coordinator, I am actively involved in managing announcements, and supporting communication efforts through the digital world. This role continues to strengthen my leadership, creativity, and teamwork skills.  </p>
     </div>
 
     <div class="achievement">
