--- a/projects.html
+++ b/projects.html
@@ -252,9 +252,7 @@
       <div class="project-content">
         <div class="project-info">
           <p class="project-text">
-            I designed and built an autonomous robot that can navigate through mazes using sensor data and decision-making algorithms. 
-            This project helped me understand the fundamentals of robotics, sensor integration, and programming logic. 
-            The robot uses ultrasonic sensors to detect obstacles and makes real-time decisions to find the optimal path.
+            During my summer robotics session, I actively engaged in real-world robotics projects. Together with my team, I developed a robotic moving hand that can be remotely controlled to lift small objects. The project demanded strong teamwork, creativity, and technical problem-solving, further deepening my passion for design and innovation.
           </p>
           <button class="show-picture-btn" onclick="toggleImage('robotics')">Show Picture</button>
           <div id="robotics-error" class="image-error">Image not found: robotics.jpg</div>
@@ -271,9 +269,7 @@
       <div class="project-content">
         <div class="project-info">
           <p class="project-text">
-            I developed an educational platform called "Brighter Generation" that provides learning resources for underprivileged students. 
-            The platform offers interactive lessons, mentorship programs, and career guidance to help students unlock their potential. 
-            This project combines web development with social impact, creating opportunities for the next generation of innovators.
+           I once participated in the Brighter Generation Program, where my team and I worked on a community project — a Smart Waste Sorting Machine designed to separate plastic and non-plastic materials. Through this experience, I strengthened my leadership, teamwork, creativity, and design skills. I also felt a deep sense of pride and fulfillment in contributing to my community. 
           </p>
           <button class="show-picture-btn" onclick="toggleImage('brighter')">Show Picture</button>
           <div id="brighter-error" class="image-error">Image not found: Bg.jpg</div>
