--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <body>
 <header>
   <h1>Hi, I'm Efrata, you can call me Eza 👋</h1>
-  <p>High School Student | Aspiring Web Developer & Creative Technologist</p>
+  <p>High School Student | Aspiring Innovator in the Digital World and Emerging Technologies </p>
   <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
@@ -181,4 +181,5 @@
   <p>© 2025 Efrata | Built using HTML & CSS</p>
 </footer>
 </body>
+
 </html>
